--- a/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
+++ b/openfisca_pf/tests/dicp/it/cas_de_tests_activite_simple_ventes.yaml
@@ -11,7 +11,7 @@
   output:
     montant_it_du: 0
     it_a_payer: 0
-    cstns_calcule: 0
+    montant_cstns_du: 0
     cstns_a_payer: 0
 - name: 2. 03 - Hydrocarbures au détail sans annexe sans releve
   period: 2020
@@ -26,7 +26,7 @@
   output:
     montant_it_du: 4000
     it_a_payer: 0
-    cstns_calcule: 3200
+    montant_cstns_du: 3200
     cstns_a_payer: 0
 - name: 3. 03 - Hydrocarbures au détail sans annexe sans releve 6000 à payer
   period: 2020
@@ -41,7 +41,7 @@
   output:
     montant_it_du: 6000
     it_a_payer: 6000
-    cstns_calcule: 4800
+    montant_cstns_du: 4800
     cstns_a_payer: 0
 - name: 4. 08 - Ventes en gros lait frais d'origine local sans annexe sans releve
   period: 2020
@@ -56,7 +56,7 @@
   output:
     montant_it_du: 8000
     it_a_payer: 8000
-    cstns_calcule: 6400
+    montant_cstns_du: 6400
     cstns_a_payer: 6400
 - name: 5. 01 - Importateurs grossistes sans annexe sans releve
   period: 2020
@@ -71,7 +71,7 @@
   output:
     montant_it_du: 24000
     it_a_payer: 24000
-    cstns_calcule: 19200
+    montant_cstns_du: 19200
     cstns_a_payer: 19200
 - name: 6. 02 - Ventes en gros sans annexe sans releve
   period: 2020
@@ -86,7 +86,7 @@
   output:
     montant_it_du: 40000
     it_a_payer: 40000
-    cstns_calcule: 32000
+    montant_cstns_du: 32000
     cstns_a_payer: 32000
 - name: 7. 06 - Tabacs sans annexe sans releve
   period: 2020
@@ -101,7 +101,7 @@
   output:
     montant_it_du: 48000
     it_a_payer: 48000
-    cstns_calcule: 38400
+    montant_cstns_du: 38400
     cstns_a_payer: 38400
 - name: 8. 10 - Négociants détaillants CA > 20M sans annexe sans releve
   period: 2020
@@ -116,7 +116,7 @@
   output:
     montant_it_du: 200000
     it_a_payer: 200000
-    cstns_calcule: 140000
+    montant_cstns_du: 140000
     cstns_a_payer: 140000
 - name: 9. 90 - Ventes < 20 millions sans annexe sans releve
   period: 2020
@@ -131,7 +131,7 @@
   output:
     montant_it_du: 80000
     it_a_payer: 80000
-    cstns_calcule: 64000
+    montant_cstns_du: 64000
     cstns_a_payer: 64000
 - name: 10. 24 - Ventes à l'aventure (armateurs) sans annexe sans releve
   period: 2020
@@ -146,7 +146,7 @@
   output:
     montant_it_du: 37500
     it_a_payer: 37500
-    cstns_calcule: 30000
+    montant_cstns_du: 30000
     cstns_a_payer: 30000
 - name: 11. 24 - Ventes à l'aventure (armateurs) avec annexe avec releve
   period: 2020
@@ -161,7 +161,7 @@
   output:
     montant_it_du: 80000
     it_a_payer: 80000
-    cstns_calcule: 64000
+    montant_cstns_du: 64000
     cstns_a_payer: 64000
 - name: 12. 24 - Ventes à l'aventure (armateurs) sans annexe sans releve
   period: 2020
@@ -176,7 +176,7 @@
   output:
     montant_it_du: 80000
     it_a_payer: 80000
-    cstns_calcule: 64000
+    montant_cstns_du: 64000
     cstns_a_payer: 64000
 - name: 13. 24 - Ventes à l'aventure (armateurs) sans annexe avec releve
   period: 2020
@@ -191,7 +191,7 @@
   output:
     montant_it_du: 80000
     it_a_payer: 80000
-    cstns_calcule: 64000
+    montant_cstns_du: 64000
     cstns_a_payer: 64000
 - name: 14. 24 - Ventes à l'aventure (armateurs) avec annexe sans releve
   period: 2020
@@ -206,7 +206,7 @@
   output:
     montant_it_du: 80000
     it_a_payer: 80000
-    cstns_calcule: 64000
+    montant_cstns_du: 64000
     cstns_a_payer: 64000
 - name: 15. 24 - Ventes à l'aventure (armateurs) avec annexe avec releve
   period: 2020
@@ -221,7 +221,7 @@
   output:
     montant_it_du: 40000
     it_a_payer: 40000
-    cstns_calcule: 32000
+    montant_cstns_du: 32000
     cstns_a_payer: 32000
 - name: 16. 11 - Ventes sans abattement avec annexe avec releve
   period: 2020
@@ -236,5 +236,5 @@
   output:
     montant_it_du: 1960000
     it_a_payer: 1960000
-    cstns_calcule: 880000
+    montant_cstns_du: 880000
     cstns_a_payer: 880000
